suite/tests/goto/invalid/dup-label.c
int main(void)
{
    goto done;

done:
    return 1;
done:
    return 0;
}
